<resources>
    <string name="app_name">MP_Term_Project</string>
    <string name="search_profiles">사람</string>
    <string name="search_contents">컨텐츠</string>
    <string name="search_hintText">검색어를 입력하세요.</string>
    <string name="chatting_titlePlaceholder">***님과의 채팅</string>
    <string name="chatting_editTextHint">채팅을 입력하세요</string>
    <string name="chatting_opponentMessage_namePlaceholder">상대방</string>
    <string name="chatting_opponentMessage_messagePlaceholder">메시지입니다.</string>
    <string name="chatting_opponentMessage_profileButton_contentDescription">프로필</string>
    <string name="menu_actionbar_main_search_title">검색</string>
    <string name="menu_actionbar_main_write_title">글 작성</string>
    <string name="menu_actionbar_main_profile_title">내 프로필</string>
    <string name="main_add_category_button_contentDescription">카테고리 추가</string>
    <string name="main_category_button_textPlaceholder">카테고리</string>
    <string name="menu_context_category_edit">편집</string>
    <string name="menu_context_category_delete">삭제</string>
    <string name="main_add_category_dialog_confirm">확인</string>
    <string name="main_add_category_dialog_cancel">취소</string>
    <string name="main_add_category_dialog_title">카테고리 문자열을 입력해주세요.</string>
    <string name="main_add_category_dialog_editText_hint">카테고리</string>
    <string name="contentDetail_content_userNamePlaceHolder">작성자</string>
    <string name="contentDetail_content_contentTextPlaceHolder">작성글</string>
    <string name="contentDetail_content_likeTextPlaceHolder">좋아요 10개</string>
    <string name="contentDetail_comment_userNamePlaceHolder">댓글 작성자</string>
    <string name="contentDetail_comment_contentTextPlaceHolder">작성댓글</string>
    <string name="content_comment">댓글</string>
    <string name="content_likes">좋아요 %d개</string>
</resources>