<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/edge"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/userProfileImageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            app:srcCompat="@drawable/user_icon"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

        <TextView
            android:id="@+id/contentUserNameText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingHorizontal="5dp"
            android:text="@string/contentDetail_content_userNamePlaceHolder"
            android:textColor="#757575" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/imageScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </ScrollView>

    <TextView
        android:id="@+id/contentText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edge"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:text="@string/contentDetail_content_contentTextPlaceHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageScrollView" />

    <TextView
        android:id="@+id/likeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edge"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:text="@string/contentDetail_content_likeTextPlaceHolder"
        android:textColor="#A1887F"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentText" />

</androidx.constraintlayout.widget.ConstraintLayout>