<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/opponentMessageLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        android:paddingVertical="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/opponentProfileButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/chatting_opponentMessage_profileButton_contentDescription"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/user_icon"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/opponentNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chatting_opponentMessage_namePlaceholder"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/opponentMessageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="#64404243"
            android:gravity="start"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:text="@string/chatting_opponentMessage_messagePlaceholder"
            android:textColor="#424242"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/myMessageLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:paddingVertical="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7">

        <TextView
            android:id="@+id/myMessageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#6403A9F4"
            android:gravity="start"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:text="@string/chatting_opponentMessage_messagePlaceholder"
            android:textColor="#455A64"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>